--- a/amazon-react/firebase.json
+++ b/amazon-react/firebase.json
@@ -1,5 +1,18 @@
 {
-  "database": {
-    "rules": "build"
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "database-rules.json",
+      "storage.rules",
+      "functions"
+    ],
+    "headers": [{
+      "source" : "**/*.@(js|html)",
+      "headers" : [ {
+        "key" : "Cache-Control",
+        "value" : "max-age=0"
+      } ]
+    }]
   }
 }
