--- a/amazon-react/package.json
+++ b/amazon-react/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-query": "^2.17.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
