--- a/amazon-react/package.json
+++ b/amazon-react/package.json
@@ -12,13 +12,16 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "firebase": "^7.19.1",
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0",
     "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-query": "^2.17.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "stripe": "^8.96.0"
   },
   "scripts": {
     "start": "react-scripts start",
